# pyecsca

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  codecov.yml  example_traces.pickle  profile_orders.py  pyproject.toml  setup.py  unittest.cfg
.github/workflows/: docs.yml  lint.yml  perf.yml  test.yml
docs/: .gitignore  Makefile  _modules.rst  api.rst  conf.py  index.rst  installation.rst  libraries.rst  notebooks.rst  papers.rst  references.rst
docs/_static/: .gitignore  custom.css
docs/_templates/: nav.html
docs/libraries/: bearssl.rst  boringssl.rst  botan.rst  bouncy_castle.rst  fastecdsa.rst  go_crypto.rst  ipp_crypto.rst  libgcrypt.rst  libressl.rst  libsecp256k1.rst  libtomcrypt.rst  mbedtls.rst  micro_ecc.rst  microsoft_symcrypt.rst  nettle.rst  nss.rst  openssl.rst  sunec.rst  wolfssl.rst
notebook/: dpa.ipynb  leakage_testing.ipynb
pyecsca/: __init__.py  align.py  cfg.py  combine.py  edit.py  filter.py  process.py  sampling.py  trace.py  tvla.py
pyecsca/ec/: __init__.py  configuration.py  context.py  coordinates.py  countermeasures.py  curve.py  curves.py  divpoly.py  error.py  formula.py  group.py  key_agreement.py  key_generation.py  mod.py  model.py  mult.py  naf.py  op.py  params.py  point.py  scalar.py  signature.py  transformations.py
pyecsca/ec/data/formulas/: add-bc-r1rv76-jac  add-bc-r1rv76-mod  add-bc-r1rv76-mod.op3  add-bearssl-v06  add-boringssl-p224.op3  add-gecc-322  add-gecc-322.op3  add-libgcrypt-v1102  add-libressl-v382  add-libressl-v382.op3  add-openssl-z256  add-openssl-z256.op3  dbl-bc-r1rv76-mod  dbl-bc-r1rv76-x25519.op3  dbl-bearssl-v06  dbl-boringssl-p224.op3  dbl-gecc-321.op3  dbl-hacl-x25519  dbl-hacl-x25519.op3  dbl-ipp-x25519.op3  dbl-libgcrypt-v1102  dbl-libgcrypt-v1102.op3  dbl-libressl-v382  dbl-secp256k1-v040  dbl-sunec-v21-ed25519.op3  ladd-botan-x25519  ladd-hacl-x25519  (+7 more)
pyecsca/ec/formula/: __init__.py  base.py  code.py  efd.py  expand.py  fake.py  fliparoo.py  graph.py  metrics.py  partitions.py  switch_sign.py  unroll.py
pyecsca/ec/formula_gen/: fliparoo.py  formula_gen.py  formula_graph.py  formula_playground.ipynb  metrics.py  partitions.py  switch_sign.py  test.py
pyecsca/ec/mod/: __init__.py  base.py  flint.py  gmp.py  raw.py  symbolic.py  test.pyx
pyecsca/ec/mult/: __init__.py  base.py  binary.py  comb.py  fake.py  fixed.py  ladder.py  naf.py  window.py
pyecsca/misc/: __init__.py  cache.py  cfg.py  utils.py
pyecsca/sca/: __init__.py  ttest.py
pyecsca/sca/attack/: CPA.py  DPA.py  __init__.py  leakage_model.py
pyecsca/sca/re/: __init__.py  base.py  epa.py  rpa.py  structural.py  tree.py  zvp.py
pyecsca/sca/scope/: __init__.py  base.py  chipwhisperer.py  picoscope.py  picoscope_alt.py  picoscope_sdk.py
pyecsca/sca/stacked_trace/: __init__.py  stacked_trace.py
pyecsca/sca/stacked_traces/: __init__.py  combine.py  correlate.py  stacked_traces.py
pyecsca/sca/trace/: __init__.py  align.py  combine.py  edit.py  filter.py  match.py  plot.py  process.py  sampling.py  test.py  trace.py
pyecsca/sca/trace_set/: __init__.py  base.py  chipwhisperer.py  hdf5.py  inspector.py  pickle.py
pyecsca/trace_set/: base.py  chipwhisperer.py  inspector.py
test/: conftest.py  test_align.py  test_combine.py  test_edit.py  test_filter.py  test_process.py  test_sampling.py  test_trace.py  test_traceset.py  test_ttest.py  test_tvla.py  utils.py
test/data/: chipwhisperer_settings.cwset  chipwhisperer_textout.npy  chipwhisperer_traces.npy  curve.json  curves.json  target.py  test.h5
test/data/divpoly/: mult_21.json
test/data/ec/: ecdh_tv.json  ecdsa_tv.json  ecgen_secp128r1.json  ectester_secp128r1.csv
test/data/formulas/: add-bc-r1rv76  add-bc-r1rv76-jac.op3  add-bearssl-v06.op3  add-boringssl-p224  add-ipp-x25519  add-ipp-x25519.op3  add-libgcrypt-v1102.op3  add-openssl-z256.op3  add-openssl-z256a  add-openssl-z256a.op3  add-sunec-v21  add-sunec-v21-ed25519  add-sunec-v21-ed25519.op3  add-sunec-v21.op3  dbl-bc-r1rv76-jac  dbl-bc-r1rv76-jac.op3  dbl-bc-r1rv76-mod.op3  dbl-bc-r1rv76-x25519  dbl-bearssl-v06.op3  dbl-boringssl-p224  dbl-gecc-321  dbl-ipp-x25519  dbl-libressl-v382.op3  dbl-secp256k1-v040.op3  dbl-sunec-v21  dbl-sunec-v21-ed25519  dbl-sunec-v21.op3  ladd-bc-r1rv76-x25519  ladd-bc-r1rv76-x25519.op3  ladd-boringssl-x25519  ladd-boringssl-x25519.op3  ladd-go-1214  ladd-go-1214.op3  ladd-hacl-x25519  ladd-hacl-x25519.op3  ladd-openssl-x25519  ladd-rfc7748  madd-secp256k1-v040.op3
test/data/sca/: chipwhisperer_keylist.npy  chipwhisperer_knownkey.npy  chipwhisperer_settings.cwset  chipwhisperer_textin.npy  config_chipwhisperer_.cfg  target.py  test.h5  test.pickle
test/ec/: bench_divpoly.py  curves.py  perf_divpoly.py  perf_formula.py  perf_mod.py  perf_mult.py  test_configuration.py  test_context.py  test_coordinates.py  test_countermeasures.py  test_curve.py  test_curves.py  test_divpoly.py  test_formula.py  test_group.py  test_key_agreement.py  test_key_generation.py  test_mod.py  test_model.py  test_mult.py  test_naf.py  test_op.py  test_params.py  test_pickle.py  test_point.py  test_regress.py  test_scalar.py  test_signature.py  test_transformations.py  utils.py
test/misc/: test_utils.py
test/plots/: .gitignore  plot_perf.py
test/sca/: conftest.py  perf_combine.py  perf_epa.py  perf_rpa.py  perf_stacked_combine.py  perf_zvp.py  test_align.py  test_attacks.py  test_combine.py  test_edit.py  test_epa.py  test_filter.py  test_leakage_models.py  test_match.py  test_plot.py  test_process.py  test_regress.py  test_rpa.py  test_rpa_context.py  test_sampling.py  test_scope.py  test_stacked_combine.py  test_stacked_correlate.py  test_stacked_traces.py  test_structural.py  test_target.py  test_test.py  test_trace.py  test_traceset.py  test_tree.py  test_ttest.py  test_zvp.py  utils.py
(+408 files in other folders)
